01-pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
    tier: front-end
spec:
  containers:
  - name: nginx
    image: nginx
