14-volumes-and-mounts-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: random-number-generator

spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh", "-c"]
    args: ["shuf -i 0-100 -n 1 >> /opt/number.out;"]
    volumeMounts:
    - mountPath: /opt
      name: data-volume
      
  volumes:
  - name: data-volume
    hostpath:
       path: data
       type: Directory
  
  # For aws volume
  volumes:
  - name: data-volume
    awsElasticBlockStore:
       volumeID: <volume-id>
       fsType: ext4
