pod-defination.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  tier: front-end
Spec:
  containers:
  - name: nginx
    image: nginx
