05-service-Loadbalancer-definition.yaml
apiVersion: v1
kind: Service
metadata:
    name: myapp-service

spec:
   type: LoadBalancer #This type supported over cloud platforme only like AWS, GCP, AZURE
   ports:
   - targetport: 80   #Running port inside the container
     port: 80         #Service port to connect to targetPort
     nodePort: 31001  #Random port running on kubernetes Host/node
   selector:
     app: myapp
     tier: front-end
