05-service-nodePort-definition.yaml
apiVersion: v1
kind: Service
metadata:
    name: myapp-service

spec:
   type: NodePort
   ports:
   - targetport: 80   #Running port inside the container
     port: 80         #Service port to connect to targetPort
     nodePort: 31001  #Random port running on kubernetes Host/node
   selector:
     app: myapp
     tier: front-end
